--- a/css/screen.css
+++ b/css/screen.css
@@ -1,29 +1,26 @@
-/* Primary color: #5051DB
-Primary color dark: #3E3EA8
-Neutral dark color: #202024 */
-
 /*------------------------------------*\
   #FONTS
 \*------------------------------------*/
-@font-face{
+
+@font-face {
     font-family: "HK Grotesk Web";
     font-weight: 200;
-    src: url("../fonts/hkgrotesk-light-webfont.woff2") format("woff2");
-    src: url("../fonts/hkgrotesk-light-webfont.woff") format("woff");
+    src: url("../fonts/hkgrotesk-light-webfont.woff2") format("woff2"),
+         url("../fonts/hkgrotesk-light-webfont.woff") format("woff");
 }
 
-@font-face{
+@font-face {
     font-family: "HK Grotesk Web";
     font-weight: 400;
-    src: url("../fonts/hkgrotesk-regular-webfont.woff2") format("woff2");
-    src: url("../fonts/hkgrotesk-regular-webfont.woff") format("woff");
+    src: url("../fonts/hkgrotesk-regular-webfont.woff2") format("woff2"),
+         url("../fonts/hkgrotesk-regular-webfont.woff") format("woff");
 }
 
-@font-face{
+@font-face {
     font-family: "HK Grotesk Web";
     font-weight: 600;
-    src: url("../fonts/hkgrotesk-medium-webfont.woff2") format("woff2");
-    src: url("../fonts/hkgrotesk-medium-webfont.woff") format("woff");
+    src: url("../fonts/hkgrotesk-medium-webfont.woff2") format("woff2"),
+         url("../fonts/hkgrotesk-medium-webfont.woff") format("woff");
 }
 
 /*------------------------------------*\
@@ -44,6 +41,11 @@ html {
     box-sizing: border-box;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
+    overflow-x: hidden;
+}
+
+.has-mobile-nav {
+    overflow: hidden;
 }
 
 *,
@@ -52,12 +54,25 @@ html {
     box-sizing: inherit;
 }
 
+@media (min-width: 768px) {
+    html {
+        font-size: 20px;
+        line-height: 1.6;
+    }
+}
+
 /*
  * Remove text-shadow in selection highlight:
  * https://twitter.com/miketaylr/status/12228805301
  *
  * Customize the background color to match your design.
  */
+
+::-moz-selection {
+    background: #5051DB;
+    color: white;
+    text-shadow: none;
+}
 
 ::selection {
     background: #5051DB;
@@ -86,23 +101,26 @@ img {
     Default markup for typographic elements
 */
 
+h1,
+h2,
+h3 {
+    font-weight: 200;
+}
+
 h1 {
     font-size: 36px;
-    font-weight: 200;
     line-height: 48px;
     margin: 0 0 24px;
 }
 
 h2 {
     font-size: 32px;
-    font-weight: 200;
     line-height: 40px;
     margin: 0 0 24px;
 }
 
 h3 {
     font-size: 26px;
-    font-weight: 200;
     line-height: 32px;
     margin: 0 0 24px;
 }
@@ -164,7 +182,7 @@ hr {
 
 a {
     color: #5051DB;
-    transition: all .1s ease-in-out;
+    transition: all .1s ease;
 }
 
 a:visited,
@@ -182,13 +200,79 @@ a:focus {
 \*------------------------------------*/
 
 /*
+    Objects: Row
+    ---
+    Creates a horizontal row that stretches the viewport and adds padding around children
+*/
+
+.o-row {
+    position: relative;
+    padding: 24px 24px 0;
+    display: flow-root;
+}
+
+/* color modifiers */
+
+.o-row--neutral-x-light {
+    background-color: #F7F7FA;
+}
+
+.o-row--gradient-1 {
+    background: linear-gradient(to top right, #5051DB, #3887F7);
+    color: #fff;
+}
+
+/* size modifiers */
+
+.o-row--lg {
+    padding: 48px 24px 24px;
+}
+
+@media (min-width: 768px) {
+    .o-row {
+        padding-left: 48px;
+        padding-right: 48px;
+    }
+
+    .o-row--md {
+        padding-top: 48px;
+        padding-bottom: 24px;
+    }
+
+    .o-row--lg {
+        padding-top: 72px;
+        padding-bottom: 48px;
+    }
+}
+
+/* padding clear modifiers */
+
+.o-row--clear-top {
+    padding-top: 0;
+}
+
+/*
+    Objects: Container
+    ---
+    Creates a horizontal container that sets de global max-width
+*/
+
+.o-container {
+    margin-left: auto;
+    margin-right: auto;
+    width: 100%;
+    max-width: 56.4em; /* 56.4 * 20px = 1128px */
+}
+
+/*
     Objects: section
     ---
     Creates vertical whitespace between adjacent sections inside a row
 */
 
 .o-section {
-    display: flow-root;
+    display: flex;
+    flex-direction: column;
 }
 
 .o-section + .o-section {
@@ -208,71 +292,6 @@ a:focus {
     }
 }
 
-
-/*
-    Objects: List
-    ---
-    Small reusable object to remove default list styling from lists
-*/
-
-.o-list {
-    list-style: none;
-    padding: 0;
-}
-
-
-/*
-    Objects: Row
-    ---
-    Creates a horizontal row that stretches the viewport and adds padding around children
-*/
-
-.o-row {
-    position: relative;
-    padding: 24px 24px 0;
-    display: flow-root;
-}
-
-/* size modifiers */
-
-.o-row--lg {
-    padding: 48px 24px 24px;
-}
-
-@media (min-width: 768px) {
-    html{
-        font-size: 20p;
-        line-height: 1.6;
-    }
-    .o-row {
-        padding-left: 48px;
-        padding-right: 48px;
-    }
-
-    .o-row--md{
-        padding-top: 48px;
-        padding-bottom: 24px;
-    }
-
-    .o-row--lg {
-        padding-top: 72px;
-        padding-bottom: 48px;
-    }
-}
-
-/*
-    Objects: Container
-    ---
-    Creates a horizontal container that sets de global max-width
-*/
-
-.o-container {
-    margin-left: auto;
-    margin-right: auto;
-    width: 100%;
-    max-width: 1128px; /*90 em --> 90 * 16px = 1440px */
-}
-
 /*
     Objects: Layout
     ---
@@ -282,15 +301,13 @@ a:focus {
 */
 
 .o-layout {
-    display: -webkit-flex;
-    display: -ms-flexbox;
     display: flex;
     flex-wrap: wrap;
 }
 
-.o-layout__item {
-    flex-basis: 100%;
-}
+    .o-layout__item {
+        flex-basis: 100%;
+    }
 
 /* gutter modifiers, these affect o-layout__item too */
 
@@ -390,9 +407,21 @@ a:focus {
     align-content: space-between;
 }
 
+/*
+    Objects: List
+    ---
+    Small reusable object to remove default list styling from lists
+*/
+
+.o-list {
+    list-style: none;
+    padding: 0;
+}
+
 /*------------------------------------*\
   #COMPONENTS
 \*------------------------------------*/
+
 /*
     Component: Logo
     ---
@@ -401,16 +430,113 @@ a:focus {
 
 .c-logo {
     height: 32px;
+    display: flex;
+    align-items: center;
 }
 
 .c-logo__symbol {
-    height: 100%;
+    height: inherit;
 }
 
 @media (min-width: 768px) {
     .c-logo {
         height: 40px;
     }
+}
+
+/*
+    Component: header
+    ---
+    Main header of the website
+*/
+
+
+.c-header__nav {
+    display: none;
+}
+
+@media (min-width: 992px) {
+    .c-header{
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+    }
+    
+    .c-header__nav {
+        display: block;
+    }
+
+}
+
+/*
+    Component: footer
+    ---
+    Main footer of the website
+*/
+
+.c-footer {
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.c-footer__logo {
+    width: 100%;
+}
+
+.c-footer__nav {
+    width: 50%;
+}
+
+@media (min-width: 768px) {
+    .c-footer {
+        justify-content: center;
+        align-items: center;
+    }
+
+    .c-footer__logo {
+        display: flex;
+        justify-content: center;
+        padding: 0 12px;
+    }
+
+    .c-footer__nav {
+        width: auto;
+        padding: 0 16px;
+    }
+}
+
+@media (min-width: 992px) {
+    .c-footer {
+        justify-content: space-between;
+    }
+
+    .c-footer__nav {
+        padding: 0;
+    }
+
+    .c-footer__logo + .c-footer__nav {
+        order: -1;
+    }
+
+    .c-footer__logo {
+        width: auto;
+    }
+
+    /*
+        Bonus: real centering with CSS
+        Checkout: https://css-tricks.com/centering-css-complete-guide/
+    */
+
+    /* .c-footer__logo {
+        width: auto;
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+    }
+    .c-footer__logo .c-logo {
+        margin-bottom: 0;
+    } */
 }
 
 /*
@@ -424,14 +550,15 @@ a:focus {
     line-height: 24px;
 }
 
+.c-nav--meta {
+    font-size: 16px;
+}
+
 .c-nav__link {
     text-decoration: none;
     font-weight: 400;
+    display: block;
     padding: 8px 0;
-}
-
-.c-nav--meta{
-    font-size: 16px;
 }
 
 .c-nav__link,
@@ -442,21 +569,21 @@ a:focus {
 
 .c-nav__link--meta,
 .c-nav__link--meta:visited,
-.c-nav__link--meta:active{
+.c-nav__link--meta:active {
     color: #6C6C75;
 }
 
 .is-selected .c-nav__link,
 .c-nav__link:hover,
 .c-nav__link:focus {
-    color: #5051DB;
+    color: #5051db;
 }
-
-
 
 @media (min-width: 768px) {
     .c-nav__list {
         display: flex;
+        margin-left: -16px;
+        margin-right: -16px;
     }
 
     .c-nav__link {
@@ -465,33 +592,226 @@ a:focus {
 }
 
 /*
-    Component: header
+    Component: Lead
     ---
-    Main header of the website
+    Lead type treatments to style everything that differs from standard typography elements
 */
 
-.c-header__nav {
-    display: none;
+.c-lead {
+    font-weight: 200;
 }
 
-@media (min-width: 992px) {
-    .c-header {
-        display: flex;
-        justify-content: space-between;
+.c-lead--lg {
+    font-size: 20px;
+    line-height: 32px;
+}
+
+.c-lead--xl {
+    font-size: 26px;
+    line-height: 32px;
+}
+
+.c-lead--xxl {
+    font-size: 32px;
+    line-height: 40px;
+}
+
+.c-lead--xxxl {
+    font-size: 36px;
+    line-height: 48px;
+}
+
+@media (min-width: 768px) {
+    .c-lead--lg {
+        font-size: 23px;
+        line-height: 32px;
     }
 
-    .c-header__nav {
-        display: block;
-    
+    .c-lead--xl {
+        font-size: 32px;
+        line-height: 40px;
+    }
+
+    .c-lead--xxl {
+        font-size: 41px;
+        line-height: 48px;
+    }
+
+    .c-lead--xxxl {
+        font-size: 52px;
+        line-height: 64px;
     }
 }
 
+@media (min-width: 1200px) {
+    .c-lead--lg {
+        font-size: 26px;
+        line-height: 36px;
+    }
 
+    .c-lead--xl {
+        font-size: 36px;
+        line-height: 48px;
+    }
 
+    .c-lead--xxl {
+        font-size: 52px;
+        line-height: 64px;
+    }
+
+    .c-lead--xxxl {
+        font-size: 66px;
+        line-height: 72px;
+    }
+}
+
+/*
+    Component: figure
+    ---
+    Special type of figure and figcaption
+*/
+
+.c-figure {
+    position: relative;
+}
+
+.c-figure__caption {
+    line-height: 15px;
+    margin-top: 8px;
+    padding-left: 6px;
+    padding-top: 1px;
+    border: 2px solid #5051DB;
+    border-width: 0 0 0 2px;
+}
+
+@media (min-width: 768px) {
+    .c-figure__caption--absolute {
+        position: absolute;
+        top: 0;
+        right: 0;
+        margin-right: 8px;
+        text-align: right;
+        background-color: #fff;
+        padding: 16px;
+        max-width: 260px;
+        border-width: 0 4px 0 0;
+    }
+}
+
+/*
+    Component: Title icon
+    ---
+    Special type of title with icon
+*/
+
+.c-title-icon {
+    display: flex;
+    align-items: flex-start;
+}
+
+.c-title-icon__icon {
+    height: 70px;
+    margin-right: 20px;
+}
+
+.c-title-icon__path {
+    fill: #202024;
+}
+
+@media (min-width: 768px) {
+    .c-title-icon__icon {
+        height: 84px;
+    }
+}
+
+@media (min-width: 1200px) {
+    .c-title-icon__icon {
+        height: 112px;
+    }
+}
+
+/*
+    Component: CTA link
+    ---
+    Small cta link with custom animation
+*/
+
+.c-link-cta {
+    position: relative;
+    display: inline-block;
+    text-decoration: none;
+    font-size: 16px;
+    line-height: 24px;
+    font-weight: 400;
+    padding: 4px 0;
+}
+
+.c-link-cta,
+.c-link-cta:visited,
+.c-link-cta:active {
+    color: #7373F5;
+}
+
+.c-link-cta::after {
+    content: "";
+    display: block;
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    height: 1px;
+    width: 100%;
+    background-color: #7373F5;
+    transform: scaleX(.5);
+    transform-origin: left;
+    transition-property: transform background-color;
+    transition-duration: .175s;
+    transition-timing-function: ease-in;
+}
+
+.c-link-cta:hover {
+    color: #3E3EA8;
+}
+
+.c-link-cta:hover::after {
+    transform: scaleX(1);
+    background-color: #3E3EA8;
+}
+
+/* inversed */
+
+.c-link-cta--inverse,
+.c-link-cta--inverse:visited,
+.c-link-cta--inverse:active,
+.c-link-cta--inverse:hover {
+    color: #fff;
+}
+
+.c-link-cta--inverse::after,
+.c-link-cta--inverse:hover::after {
+    background-color: #fff;
+}
 
 /*------------------------------------*\
   #UTILITIES
 \*------------------------------------*/
+
+/*
+    Utilities: color
+    ---
+    Utility classes to put specific colors onto elements
+*/
+
+.u-color-primary-light {
+    color: #7373F5 !important;
+}
+
+.u-color-primary-base {
+    color: #5051DB !important;
+}
+
+.u-color-primary-dark {
+    color: #3E3EA8 !important;
+}
 
 /*
     Utilities: spacing
@@ -503,6 +823,29 @@ a:focus {
     padding-top: 0 !important;
 }
 
+.u-mb-clear {
+    margin-bottom: 0 !important;
+}
+
+.u-mb-xs {
+    margin-bottom: 4px !important;
+}
+
+.u-mb-sm {
+    margin-bottom: 8px !important;
+}
+
+.u-mb-md {
+    margin-bottom: 16px !important;
+}
+
+.u-mb-lg {
+    margin-bottom: 32px !important;
+}
+
+.u-mb-xl {
+    margin-bottom: 48px !important;
+}
 
 /*
     Utilities: max-width
